--- a/sass/pages/_homePage.scss
+++ b/sass/pages/_homePage.scss
@@ -68,7 +68,7 @@
 //  start section two
 .section_two {
   color: white;
-  background-image: url("../../images/image-balck-coffee.svg");
+  background-image: url("/images/image-balck-coffee.svg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
